--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ form{
 
 .pyjamas {
     /* background-color: green; */
-    background-image: url('./images/pyjamashjältarna.png');
+    background-image: url('./images/pj.png');
     background-repeat: no-repeat;
     background-size: cover;
     width: 100vh;
