--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ form{
 
 .ballons{
     /* background-color: red; */
-     background-image: url('./images/Sjöjungfru.png');
+     background-image: url('./images/jungfru.png');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
