--- a/style.css
+++ b/style.css
@@ -52,12 +52,12 @@ input, textarea, select {
 }
 
 .pyjamas {
-    background-image: url('./images/Bakgrunden\ för\ kula\ togs\ bort.png');
+    background-image: url('./images/Bakgrunden\ för\ disco\ togs\ bort.png');
     background-repeat: no-repeat;
     background-size: cover;
     width: 100vh;
     height: 50vw;
-    margin-top: 120px;
+   margin-left: 90px;
 }
 
 .ballons{
